# backend/src/main/java/com/app/bookshop/dto/Purchase.java
@@ -6,12 +6,13 @@ import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
 
 public record Purchase(
     @NotNull @Valid CustomerRequest customer,
     @NotNull @Valid AddressRequest shippingAddress,
     @NotNull @Valid AddressRequest billingAddress,
-    @NotNull @NotEmpty @Valid List<OrderItemRequest> orderItems,
-    @NotBlank String currencyCode
+    @NotNull @NotEmpty @Size(max = 50) @Valid List<OrderItemRequest> orderItems,
+    @NotBlank @Size(max = 8) String currencyCode
 ) {
 }
